--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-﻿Hello World
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <title>Furqan's Project</title>
+    <style>
+        body { font-family: sans-serif; text-align: center; padding: 50px; background-color: #f4f4f4; }
+        h1 { color: #333; }
+        .card { background: white; padding: 20px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); display: inline-block; }
+    </style>
+</head>
+<body>
+    <div class="card">
+        <h1>🚀 My Vercel Website</h1>
+        <p>Deployed successfully from PowerShell!</p>
+    </div>
+</body>
+</html>
